--- a/app/build.gradle
+++ b/app/build.gradle
@@ -202,6 +202,7 @@ dependencies {
     String testingSupportVersion = '1.0.2'
     String mockitoCore = 'org.mockito:mockito-core:1.9.5'
     String leakCanaryVersion = '1.6.2'
+    String netCipherVersion = '2.0.0-alpha1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
@@ -239,6 +240,9 @@ dependencies {
     implementation 'net.hockeyapp.android:HockeySDK:5.1.0'
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'org.jsoup:jsoup:1.11.3'
+
+    implementation "info.guardianproject.netcipher:netcipher:$netCipherVersion"
+    implementation "info.guardianproject.netcipher:netcipher-webkit:$netCipherVersion"
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
