--- a/app/build.gradle
+++ b/app/build.gradle
@@ -239,6 +239,8 @@ dependencies {
     implementation 'net.hockeyapp.android:HockeySDK:5.1.0'
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'info.guardianproject.netcipher:netcipher-webkit:2.0.0-alpha1'
+
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
