--- a/app/build.gradle
+++ b/app/build.gradle
@@ -240,7 +240,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'info.guardianproject.netcipher:netcipher-webkit:2.0.0-alpha1'
-
+    implementation 'info.pluggabletransports.aptds:apt-meek-obfs4:1.0.4a'
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
