--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven { url "https://raw.githubusercontent.com/guardianproject/gpmaven/master"}
     }
 }
