--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ android {
         testApplicationId 'org.wikipedia.test'
         testInstrumentationRunner "org.wikipedia.WikipediaTestRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -89,12 +90,12 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', 'proguard-rules-debug.pro'
             testProguardFile 'test-proguard-rules.pro'
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testProguardFile 'test-proguard-rules.pro'
         }
@@ -241,6 +242,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'info.guardianproject.netcipher:netcipher-webkit:2.0.0-alpha1'
     implementation 'info.pluggabletransports.aptds:apt-meek-obfs4:1.0.4a'
+    implementation project(path: ':littleproxy')
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
