wip: implemented sock over socks forwarding

--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ allprojects {
         jcenter()
         google()
         maven { url "https://raw.githubusercontent.com/guardianproject/gpmaven/master"}
+        mavenLocal()
     }
 }
