--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,6 +188,7 @@ android.applicationVariants.all { variant ->
 apply from: '../gradle/src/test.gradle'
 apply from: '../gradle/src/checkstyle.gradle'
 
+
 dependencies {
 
     // To keep the Maven Central dependencies up-to-date
@@ -241,8 +242,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'info.guardianproject.netcipher:netcipher-webkit:2.0.0-alpha1'
-    implementation 'info.pluggabletransports.aptds:apt-meek-obfs4:1.0.4a'
+    implementation 'info.pluggabletransports.aptds:apt-meek-obfs4-legacy:1.0.5'
     implementation project(path: ':littleproxy')
+    implementation project(path: ':TcpForwardDaemon')
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
@@ -273,7 +275,6 @@ dependencies {
     androidTestImplementation "com.android.support.test:runner:$testingSupportVersion" // Android JUnit Runner
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
-
 }
 
 private setSigningConfigKey(config, Properties props) {
